terraform/kubernetes/cluster-policies/cilium/shared/metrics-server-hardened.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: metrics-server-hardened
spec:
  description: >-
    Hardened policy for the metrics-server namespace.
    Metrics-server serves the aggregated metrics.k8s.io API and scrapes kubelets.
    Ingress: kube-apiserver into metrics-server on the secure serving port,
    plus intra-namespace traffic.
    Egress: DNS, kube-apiserver for request-header config and discovery,
    kubelets on 10250/TCP, and intra-namespace traffic.
  endpointSelector:
    matchLabels:
      "k8s:io.kubernetes.pod.namespace": metrics-server
      "k8s:app.kubernetes.io/name": metrics-server
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": metrics-server
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toServices:
        - k8sService:
            namespace: default
            serviceName: kubernetes
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": metrics-server
